--- a/backend/predictor/prepare_data.ipynb
+++ b/backend/predictor/prepare_data.ipynb
@@ -2904,7 +2904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 425,
    "id": "4996c122",
    "metadata": {},
    "outputs": [
@@ -2913,7 +2913,8 @@
      "output_type": "stream",
      "text": [
       "Train sequences: torch.Size([22472, 5, 26]), Targets: torch.Size([22472, 1])\n",
-      "Val sequences: torch.Size([4659, 5, 26]), Targets: torch.Size([4659, 1])\n"
+      "Val sequences: torch.Size([4659, 5, 26]), Targets: torch.Size([4659, 1])\n",
+      "Test sequences: torch.Size([4646, 5, 26]), Targets: torch.Size([4646, 1])\n"
      ]
     }
    ],
@@ -2930,14 +2931,21 @@
     "    future_sequences=1, \n",
     "    min_sequences=1\n",
     ")\n",
+    "X_test, y_test = create_sequences(\n",
+    "    processed_test_df, \n",
+    "    past_sequences=5, \n",
+    "    future_sequences=1, \n",
+    "    min_sequences=1\n",
+    ")\n",
     "\n",
     "print(f\"Train sequences: {X_train.shape}, Targets: {y_train.shape}\")\n",
-    "print(f\"Val sequences: {X_val.shape}, Targets: {y_val.shape}\")"
+    "print(f\"Val sequences: {X_val.shape}, Targets: {y_val.shape}\")\n",
+    "print(f\"Test sequences: {X_test.shape}, Targets: {y_test.shape}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 426,
    "id": "c440fb95",
    "metadata": {},
    "outputs": [
@@ -2952,6 +2960,7 @@
    "source": [
     "torch.save((X_train, y_train), 'data/train_sequences.pt')\n",
     "torch.save((X_val, y_val), 'data/val_sequences.pt')\n",
+    "torch.save((X_test, y_test), 'data/test_sequences.pt')\n",
     "\n",
     "print(\"Data preparation complete. Sequences saved to disk.\")"
    ]
